# fa25-nmep-hw4

./: .gitignore  README.md  pyproject.toml
data/lm/: README.md  a_quiet_place.txt  ai.txt  avatar.txt  avengers.txt  black_panther.txt  blade.txt  blade_runner.txt  cars2.txt  coco.txt  dune.txt  dune_part_one.txt  ex_machina.txt  fantastic_4.txt  ghostbusters.txt  ghostbusters2.txt  gravity.txt  incredibles.txt  interstellar.txt  jurassic_park_iii.txt  jurassic_park_lost_world.txt  limitless.txt  mad_max_2.txt  martian.txt  matrix.txt  megamind.txt  men_in_black.txt  predator.txt  prestige.txt  space_odyssey.txt  spiderman.txt  star_trek.txt  star_trek2.txt  star_wars_2.txt  thing.txt  toystory.txt  transformers.txt  walle.txt  x_men.txt  zootopia.txt
data/nmt/: en-fr-test.csv
scripts/: decode_lm.py  decode_nmt.py  train_lm.py  train_nmt.py
seq2seq/: __init__.py
seq2seq/data/: fr_en.py  screenplay.py
seq2seq/tokenizer/: bpe_tokenizer.py  character_tokenizer.py  tokenizer.py
seq2seq/transformer/: attention.py  decoder.py  encoder.py  transformer.py
seq2seq/transformer/data/: french_english_dataset.py
tests/test_tokenizer/: test_character_tokenizer.py
tests/test_transformer/: test_attention.py  test_decoder.py  test_encoder.py  test_transformer.py
