[project]
name = "seq2seq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch==2.7.1",
    "numpy",
    "tqdm>=4.67.1",
    "pandas>=2.3.3",
    "transformers>=4.57.1",
    "wandb>=0.22.2",
]

[tool.setuptools]
packages = ["seq2seq"]
